--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 body{
   background-color: #020617;
   overflow-x: hidden;
+  
 }
 
 .headingFont{
@@ -34,4 +35,63 @@ body{
 
 .subheadingFont{
   font-family: 'subheadingFont', sans-serif;
+}
+
+.bgLuv{
+  background-color: rgba(83, 83, 83, 0.326); 
+}
+
+.bgLuv2{
+  background-color: rgba(83, 83, 83, 0.326); 
+}
+
+@font-face {
+  font-family: 'productFont';
+  src: url('../src/assets/fonts/product-font.ttf') ;
+  font-weight: normal;
+  font-style: normal;
+}
+
+.productFont{
+  font-family: 'productFont', sans-serif ;
+}
+
+.blob {
+  position: absolute;
+  opacity: 0.5;
+  width: 400px;
+  aspect-ratio: 1/1;
+  animation: animate 10s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite
+    alternate forwards;
+  filter: blur(40px);
+  z-index: -1;
+  background: linear-gradient(
+    47deg,
+    rgba(255, 88, 139, 1) 21%,
+    rgb(0 164 173) 67%,
+    rgba(118, 74, 166, 1) 81%
+  );
+
+  /*  Optional  */
+  /*   box-shadow: inset 50px 50px 17px 0px #ff588b,
+    inset 100px 100px 17px 0px #66319f; */
+}
+
+@keyframes animate {
+  0% {
+      translate: 40% -25%;
+      border-radius: 60% 40% 30% 70% / 100% 85% 92% 74%;
+  }
+  50% {
+      translate: 0% 13%;
+      border-radius: 20% 71% 47% 70% / 81% 15% 22% 54%;
+      rotate: 41deg;
+      scale: 1.15;
+  }
+  100% {
+      translate: -45% 39%;
+      border-radius: 100% 75% 92% 74% / 60% 80% 30% 70%;
+      rotate: -60deg;
+      scale: 1.05;
+  }
 }
