--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,3 +95,13 @@ body{
       scale: 1.05;
   }
 }
+
+.blurEffect{
+  /* From https://css.glass */
+background: rgba(255, 255, 255, 0.13);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(7.1px);
+-webkit-backdrop-filter: blur(7.1px);
+border: 0px solid rgba(255, 255, 255, 0.3);
+}
