--- a/client/src/index.css
+++ b/client/src/index.css
@@ -167,3 +167,10 @@ backdrop-filter: blur(7.1px);
 -webkit-backdrop-filter: blur(7.1px);
 border: 0px solid rgba(255, 255, 255, 0.3);
 }
+
+.textShadow {
+  text-shadow: 
+    4px 4px 10px rgba(0, 0, 0),
+    4px 4px 10px rgba(0, 0, 0),
+    4px 4px 15px rgba(0, 0, 0);
+}
